# powder

./: Cargo.toml  README.md
input/: parameters.json5
src/: lib.rs
src/parts/: cell_size.rs  direction.rs  mod.rs  order.rs  palette.rs  particle.rs  spec.rs  stencil.rs  world.rs
